force-app/src/objects/fferpcore__UserInformation__c.object
<CustomObject>
    <customHelpPage>fferpcore__UserInformationHelp</customHelpPage>
    <description>Contains user information records that specify user information to be created or updated and the template to use when the Apply User Information Template scheduled job runs.</description>
    <fields>
        <fullName>fferpcore__AddressCity__c</fullName>
        <description>City of the Salesforce user to be created or updated.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__AddressCountry__c</fullName>
        <description>Country of the Salesforce user to be created or updated.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__AddressState__c</fullName>
        <description>State or province of the Salesforce user to be created or updated.</description>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__AddressStreet__c</fullName>
        <description>Street of the Salesforce user to be created or updated.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__AddressZipCode__c</fullName>
        <description>Zip or postal code of the Salesforce user to be created or updated.</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Alias__c</fullName>
        <description>Alias of the Salesforce user to be created or updated.</description>
        <inlineHelpText>Alias of the Salesforce User to be created or updated.</inlineHelpText>
        <label>Alias</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Company__c</fullName>
        <description>Company of the Salesforce user to be created or updated.</description>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Email__c</fullName>
        <description>Email address of the Salesforce user to be created or updated.</description>
        <inlineHelpText>Email address of the Salesforce User to be created or updated.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fferpcore__FirstName__c</fullName>
        <description>First name of the Salesforce user to be created or updated.</description>
        <inlineHelpText>First Name of the Salesforce User to be created or updated.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsUserActive__c</fullName>
        <description>Indicates whether the related Salesforce user is active.</description>
        <formula>fferpcore__User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the related Salesforce user is active.</inlineHelpText>
        <label>User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__LastName__c</fullName>
        <description>Last name of the Salesforce user to be created or updated.</description>
        <inlineHelpText>Last Name of the Salesforce User to be created or updated.</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Message__c</fullName>
        <description>Errors that occurred when applying the user information to the Salesforce user.</description>
        <inlineHelpText>Errors that occurred when applying the user information to the Salesforce User.</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Salesforce user was notified that their account is ready.</description>
        <inlineHelpText>Indicates whether the Salesforce User was notified that their account is ready.</inlineHelpText>
        <label>User Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProfileName__c</fullName>
        <description>Name of the profile to be applied to the Salesforce user.</description>
        <inlineHelpText>Name of the Profile to be applied to the Salesforce User.</inlineHelpText>
        <label>Profile Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <description>The status of the information to be applied to the Salesforce user.</description>
        <inlineHelpText>The status of the information to be applied to the Salesforce User.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Create</fullName>
                    <default>true</default>
                    <label>Pending Create</label>
                </value>
                <value>
                    <fullName>Pending Update</fullName>
                </value>
                <value>
                    <fullName>Pending Activation</fullName>
                </value>
                <value>
                    <fullName>Pending Deactivation</fullName>
                </value>
                <value>
                    <fullName>Updating</fullName>
                </value>
                <value>
                    <fullName>Deactivating</fullName>
                </value>
                <value>
                    <fullName>Activating</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Failed to Create</fullName>
                </value>
                <value>
                    <fullName>Failed to Update</fullName>
                </value>
                <value>
                    <fullName>Failed to Activate</fullName>
                </value>
                <value>
                    <fullName>Failed to Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TimezoneSidKey__c</fullName>
        <description>The time zone ID for the Salesforce user.</description>
        <inlineHelpText>The timezone ID for the Salesforce User.</inlineHelpText>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                    <label>Argentina/Buenos_Aires</label>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indiana/Indianapolis</fullName>
                    <label>Indiana/Indianapolis</label>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Dubai</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce user to be created or updated with this user information record.</description>
        <inlineHelpText>Lookup to the Salesforce User to be created or updated with this user information record.</inlineHelpText>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Information</relationshipLabel>
        <relationshipName>UserInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Information</label>
    <listViews>
        <fullName>erpws__InactiveUserInformationRecords</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__FirstName__c</columns>
        <columns>fferpcore__LastName__c</columns>
        <columns>fferpcore__User__c</columns>
        <columns>fferpcore__Status__c</columns>
        <columns>fferpcore__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fferpcore__Status__c</field>
            <operation>notEqual</operation>
            <value>Active</value>
        </filters>
        <label>Inactive User Information Records</label>
    </listViews>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__FirstName__c</columns>
        <columns>fferpcore__LastName__c</columns>
        <columns>fferpcore__Email__c</columns>
        <columns>fferpcore__User__c</columns>
        <columns>fferpcore__Status__c</columns>
        <columns>fferpcore__Notified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>